crates/rustty-vt/tests/snapshots/fixtures__shell_prompt_with_colors_and_clear_line.snap
---
source: crates/rustty-vt/tests/fixtures.rs
assertion_line: 17
expression: "render(20, 3,\n\"\\x1b[32muser\\x1b[0m@host:~$ ls\\r\\n\\x1b[1;34mdir\\x1b[0m  file\\r\\n\\x1b[K$ \")"
---
user@host:~$ ls
dir  file
$
-- cursor col=2 row=2
