crates/rustty-vt/tests/snapshots/fixtures__wide_chars_and_wrapping.snap
---
source: crates/rustty-vt/tests/fixtures.rs
assertion_line: 40
expression: "render(5, 3, \"日本語テキスト\")"
---
語テ
キス
ト
-- cursor col=2 row=2
